<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">나만의 여행일기</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_camara">action_camara</string>
    <string name="action_notebook">action_notebook</string>
    <string name="action_home">action_home</string>
    <string name="photo_date">날짜</string>
    <string name="photo_name">제목을 입력하세요.</string>
    <string name="photo_report_date">날짜</string>
    <string name="photo_report_point">장소</string>
    <string name="photo_report_coment">설명</string>
    <string name="photo_point">촬영위치장소</string>
    <string name="photo_report">내용을 입력하세요.</string>
    <string name="photo_tag">태그</string>
    <string name="drawer_open">Hi</string>
    <string name="photo_seting">자동입력 중 입니다.</string>
    <string name="photo_image">photo_image</string>
    <string name="photo_gpsimage">photo_gpsimage</string>
    <string name="gallety_expandimage">gallety_expandimage</string>
    <string name="gallery_back">뒤로가기</string>
    <string name="gallery_delete">삭제하기</string>
    <string name="information_point">현제위치</string>
    <string name="information_hospital">병원</string>
    <string name="information_foodzoon">음식점</string>
    <string name="information_lodging">숙소</string>
    <string name="information_bank">은행</string>
    <string name="information_convenience">편의점</string>
    <string name="information_oil">주유소</string>
    <string name="information_icon">information_icon</string>
    <string name="information_name">상호명</string>
    <string name="information_address">주소</string>
    <string name="information_distance">거리</string>
    <string name="maker_title">제목</string>
    <string name="maker_subtitle">세부내용</string>
    <string name="maker_imageview">마커이미지</string>
    <string name="map_point">경로그리기</string>
    <string name="map_zoomin">지도확대</string>
    <string name="map_zoomout">지도축소</string>
    <string name="customview_title">상호명</string>
    <string name="customview_point">주소</string>
    <string name="customview_image">가게이미지</string>
    <string name="tour_image">관광지사진</string>
    <string name="tour_pointimage">위치사진</string>
    <string name="tour_title">관광지이름</string>
    <string name="tour_point">관광지주소</string>
    <string name="tour_minutely">상세설명</string>
    <string name="tour_information">문의 및 안내</string>
    <string name="tour_offday">휴무일</string>
    <string name="tour_parking">주차장소</string>
    <string name="tour_baby_pat">유모차대여 및 애완동물</string>
    <string name="tour_foodzoon">주변음식점위치</string>
    <string name="tour_lodging">주변숙소위치</string>
    <string name="tour_usetime">이용시간</string>
    <string name="tour_next">다음</string>
    <string name="tour_before">이전</string>
    <string name="tour_distance">남은거리</string>
    <string name="action_facebook">페이스북</string>
    <string name="action_kakaotalk">카카오톡</string>
    <string name="action_naver">네이버블로그</string>
    <string name="facebook_app_id">734265713321481</string>
    <string name="minutely_foodzoon">주변 음식점 위치</string>
    <string name="minutely_badzoon">주변 숙소 위치</string>
    <string name="map_foodzoon">음식점</string>
    <string name="map_lodging">숙소</string>
    <string name="map_oil">주유소</string>
    <string name="map_mapfactory">맵전용아이콘모음</string>
    <string name="map_beach">해수욕장</string>
    <string name="map_trip">주변 관광지</string>
    <string name="map_festival">주변 행사</string>
    <string name="map_travel">여행지</string>
    <string name="map_tree">수목원</string>
    <string name="map_setting">현제 위치를 받아 오는 중입니다.</string>
    <string name="map_weather">날씨아이콘</string>
    <string name="map_weather_text">날씨</string>
    <string name="home_weather_image">날씨아이콘</string>
    <string name="home_weather_text">현재날씨</string>
    <string name="home_food_text">주변 음식점</string>
    <string name="home_lodging_text">주변 숙박시설</string>
    <string name="home_tour_text">주변 관광지</string>
    <string name="home_point_image">현제위치지도</string>
    <string name="home_point_text">현재위치</string>
    <string name="festival_photo">행사사진</string>
    <string name="festival_name">행사이름</string>
    <string name="festival_address">행사주소</string>
    <string name="festival_inforamtion">행사정보</string>
    <string name="festival_find">검색</string>
    <string name="festival_next">다음</string>
    <string name="festival_back">이전</string>
    <string name="festival_date">행사날짜</string>
    <string name="festival_minutely_name">행사이름</string>
    <string name="festival_minutely_address">행사주소</string>
    <string name="festival_minutely_map">행사지도</string>
    <string name="festival_minutely_photo">행사사진</string>
    <string name="festival_minutely_overview">상세설명</string>
    <string name="festival_minutely_information1">주최사</string>
    <string name="festival_minutely_information2">주관사</string>
    <string name="festival_minutely_point">행사장소</string>
    <string name="festival_minutely_useinformation">이용정보</string>
    <string name="festival_minutely_foodzoon">주변음식점</string>
    <string name="festival_minutely_lodging">주변숙소</string>
    <string name="sestting_name">이름</string>
    <string name="sestting_bar">기본 설정</string>
    <string name="sestting_display">화면 설정</string>
    <string name="sestting_name_edit">이름을 입력해주세요.</string>
    <string name="sestting_radio1">1 : 1 화면구성</string>
    <string name="sestting_radio2">2 : 1 화면구성</string>
    <string name="sestting_radio3">3 : 1 화면구성</string>
    <string name="sestting_check_bar">상태 점검</string>
    <string name="sestting_gps_check">GPS 상태 점검</string>
    <string name="sestting_server_check">서버 상태 점검</string>
    <string name="sestting_app_check">APP 버전 확인</string>
    <string name="sestting_information">문의 및 안내</string>
    <string name="sestting_save">저장하기</string>
    <string name="sestting_dev_blog">블로그</string>
    <string name="sestting_dev_name">Sprout(Yeop)</string>
    <string name="sestting_dev_email">yeop9657@naver.com</string>
    <string name="comment_information">접속 지역</string>
    <string name="comment_write">내용을 입력하세요.</string>
    <string name="comment_write_but">전송</string>
    <string name="comment_read_but">수신</string>
    <string name="comment_talk">대화</string>
    <string name="comment_point">장소</string>
    <string name="comment_date">날짜</string>
    <string name="comment_name">이름</string>
    <string name="map_share">공유</string>
    <string name="point_message">GPS기능이 탑재되었거나, Wi-Fi 기능이 탑재된 단말기 또는 Cell ID에 기반한 단말기 등을 비롯하여 위치정보수집기능이 주기적으로 이동통신 및 Wi-Fi 기지국에 대한 위치정보를 수집합니다. 이러한 정보는, 이용자의 현재 위치를 확인하고 서비스를 제공하는데 사용됩니다. 그 외 활용할 목적으로 서버에 수집, 전송, 또는 제 3자에게 제공하지 않습니다.</string>
    <string name="map_beath">온천</string>
    <string name="main_destiation">남은거리</string>
    <string name="main_name">이름</string>
</resources>
